fix video visibility

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -224,6 +224,7 @@
 		margin-bottom: 50px;
 
 		.c-connection-video--mobile {
+			display: block !important;
 			position: absolute;
 			top: 60px;
 			left: 10px;
